--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "@repo/typescript-config/nestjs.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "baseUrl": "./"
+    "outDir": "dist",
+    "baseUrl": "."
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "dist"]
