--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,12 @@ catalog:
   "@changesets/cli": ^2.29.4
   "@eslint/js": ^9.25.0
   "@hookform/resolvers": ^5.0.1
+  "@nestjs/cli": ^11.0.0
+  "@nestjs/common": ^11.0.1
+  "@nestjs/core": ^11.0.1
+  "@nestjs/platform-express": ^11.0.1
+  "@nestjs/schematics": ^11.0.0
+  "@nestjs/testing": ^11.0.1
   "@next/eslint-plugin-next": ^15.3.2
   "@radix-ui/react-accordion": ^1.2.10
   "@radix-ui/react-avatar": ^1.1.9
@@ -23,10 +29,15 @@ catalog:
   "@radix-ui/react-toggle": ^1.1.8
   "@radix-ui/react-toggle-group": ^1.1.9
   "@svgr/webpack": ^8.1.0
+  "@swc/cli": ^0.6.0
+  "@swc/core": ^1.10.7
   "@tailwindcss/postcss": ^4.1.6
-  "@types/node": ^22.15.17
+  "@types/express": ^5.0.0
+  "@types/jest": ^29.5.14
+  "@types/node": ^22.10.7
   "@types/react": 19.1.4
   "@types/react-dom": 19.1.5
+  "@types/supertest": ^6.0.2
   class-variance-authority: ^0.7.1
   clsx: ^2.1.1
   eslint: ^9.26.0
@@ -36,6 +47,7 @@ catalog:
   eslint-plugin-turbo: ^2.5.3
   globals: ^16.1.0
   husky: ^9.1.7
+  jest: ^29.7.0
   lint-staged: ^16.0.0
   lucide-react: ^0.510.0
   next: ^15.3.2
@@ -47,14 +59,22 @@ catalog:
   react: ^19.1.0
   react-dom: ^19.1.0
   react-hook-form: ^7.56.3
+  reflect-metadata: ^0.2.2
+  rxjs: ^7.8.1
   shiki: ^3.4.1
+  source-map-support: ^0.5.21
+  supertest: ^7.0.0
   syncpack: ^13.0.4
   tailwind-merge: ^3.3.0
   tailwindcss: ^4.1.6
+  ts-jest: ^29.2.5
+  ts-loader: ^9.5.2
+  ts-node: ^10.9.2
+  tsconfig-paths: ^4.2.0
   tsup: ^8.4.0
   turbo: ^2.5.3
   tw-animate-css: ^1.2.9
-  typescript: ^5.8.3
+  typescript: ^5.7.3
   typescript-eslint: ^8.32.1
   use-debounce: ^10.0.4
   zod: ^3.24.4
