--- a/tools/prettier/package.json
+++ b/tools/prettier/package.json
@@ -7,6 +7,9 @@
     "prettier-plugin-tailwindcss": "catalog:"
   },
   "main": "./index.js",
+  "exports": {
+    ".": "./index.js"
+  },
   "prettier": "@repo/prettier-config",
   "private": true,
   "scripts": {
